. [NEW] SpriteBatchNode: Removed support for HONOR_TRANSFORM.
. [NEW] SpriteFrameCache: addSpriteFramesWithFile:textureFile renamed to addSpriteFramesWithFile:textureFilename to be consistent with the new API
. [NEW] Templates: Removed Xcode3 templates. Updated Xcode4 templates.
. [NEW] Tests: All tests use RootViewController
. [NEW] Tests: Chipmunk + cocos2d test: Added PhysicsSprite and other Chipmunk's best practices
. [NEW] Tests: FontTest uses  "bundle" fonts instead of FontLabel
. [NEW] Tests: Removed HelloWorld* tests
. [NEW] Tests: TextureTest has TextureCache#asyncWithBlock test
. [NEW] Tests: Removed Chipmunk iOS TestBed since it was outdated
. [NEW] Texture: Uses NPOT textures (gles20 already supports them)
. [NEW] Texture: PVRTC-RAW format is no longer supported. Use the non-raw format instead.
. [NEW] TextureCache: Added asyncWithBlock method
. [NEW] Tiled: cc_vertexz property is no longer supported. Will raise exception if found.
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
. [FIX] Node: slightly faster nodeToParentTransform()
. [FIX] ProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
. [FIX] RenderTexture: getUIImageFromBuffer doesn't return artifacs
. [FIX] TextureCache: Uses "self" instead of "CCTextureCache" in shared instance
. [FIX] Sprite: displayedFrame correctly returns originalSize
. [FIX] SpriteFrameCache: it doesn't retain the textures when they are loaded from a dictionary file (issue #1227)
. [FIX] Xcode: cocosLive: Removed. Use OpenFeint or GameCenter instead
. [FIX] Xcode: FontLabel: Removed since in iOS 4 you can load custom TTF
. [FIX] Xcode: TouchJSON: Removed. No longer needed since cocosLive was removed
. [FIX] Xcode: Tremor / vorbis: Removed. Experimental sound engine is no longer supported
. [FIX] Xcode: iOS 4 is minimun required to run
. [3RD] Box2d: Using Box2D 2.2.0
. [3RD] Chipmunk: Using Chipmunk v6.0.1